@@ -14,3 +14,5 @@
 14. Remove "int pd_fetch_acc_log_entry(int port)"
 15. Remove "static int pd_restart_tcpc(int port)", "void pd_set_suspend(int port, int enable)", "uint8_t req_suspend_state;", "static int pd_restart_tcpc(int port)" and "case PD_STATE_SUSPENDED: {"
 16. Remove "hook_call_deferred(&pd_usb_billboard_deferred_data,	PD_T_AME);"
+17. Remove "#ifdef CONFIG_LOW_POWER_IDLE"
+18. Remove "pd_chipset_*", "#if defined(HAS_TASK_CHIPSET) && defined(CONFIG_USB_PD_DUAL_ROLE)"
